--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
       <nav id="site-nav" class="greedy-nav">
         
         <a class="site-title" href="index.html">
-          Hello Minecraft! Launcher
-          
+          Bleach vs. Naruto          
         </a>
         <ul class="visible-links"><li class="masthead__menu-item">
               <a href="download/index.html">下载</a>
