--- a/download/index.html
+++ b/download/index.html
@@ -12,19 +12,19 @@
 <head>
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>下载 - Hello Minecraft! Launcher</title>
-<meta name="description" content="HMCL 启动器       跨平台       整合包管理       自动安装       八年历史       三亿次使用">
+<!-- begin _includes/seo.html --><title>下载 - HelBleach vs. Naruto</title>
+<meta name="description" content="Bleach vs. Naruto">
 
 
 
 <meta property="og:type" content="website">
-<meta property="og:locale" content="en_US">
-<meta property="og:site_name" content="Hello Minecraft! Launcher">
+<meta property="og:locale" content="zh_CN">
+<meta property="og:site_name" content="Bleach vs. Naruto">
 <meta property="og:title" content="下载">
 <meta property="og:url" content="index.html">
 
 
-  <meta property="og:description" content="HMCL 启动器       跨平台       整合包管理       自动安装       八年历史       三亿次使用">
+  <meta property="og:description" content="Bleach vs. Naruto">
 
 
 
@@ -61,11 +61,6 @@
 
 <!-- end _includes/seo.html -->
 
-
-
-  <link href="../feed.xml" type="application/atom+xml" rel="alternate" title="Hello Minecraft! Launcher Feed">
-
-
 <!-- https://t.co/dKP3o1e -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -80,7 +75,7 @@
 
 
 
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="/favicon.ico">
 </head>
 
 <body class="layout--download">
