--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     
       "@type": "Person",
       "name": null,
-      "url": "https://hmcl.huangyuhui.net"
+      "url": "https://bvn.download.jnw031.cf/"
     /
   }
 </script>
