--- a/download/index.html
+++ b/download/index.html
@@ -312,14 +312,14 @@ getBuildInfo('dev')
 </script>
 
 <div class="swimlane">
-  <h2>下载稳定版 <span id="stableVersion">Loading...</span></h2>
+  <h2>下载稳定版 <span id="stableVersion"></span></h2>
   <div class="alt-downloads">
     <div class="download windows">
       <div class="logo"></div>
-      <a href="https://url94.ctfile.com/d/33326794-44675752-fc62fc">
+      <a href="https://jnw031.lanzouw.com/iv0nk0l9micd">
         <button class="link-button dlink" data-os="win">
-          <img class="download-icon" src="../assets/img/download.svg" width="18px" height="18px" alt="下载 Hello Minecraft! Launcher" />
-          <img class="download-icon-accessible" src="../assets/img/download-black.svg" width="18px" height="18px" alt="下载 Hello Minecraft! Launcher" />
+          <img class="download-icon" src="../assets/img/download.svg" width="18px" height="18px" alt="下载 Bleach vs. Naruto" />
+          <img class="download-icon-accessible" src="../assets/img/download-black.svg" width="18px" height="18px" alt="下载 Bleach vs. Naruto" />
           Windows
           <small>Windows XP, Vista, 7, 8, 10</small>
         </button>
@@ -330,195 +330,9 @@ getBuildInfo('dev')
           <col />
         </colgroup>
         <tbody>
-        <tr>
-          <td>访问密码</td>
-          <td><strong>5267</strong></td>
-        </tr>
         </tbody>
       </table>
     </div>
-    <div class="download linux">
-      <div class="logo"></div>
-      <a href="https://url94.ctfile.com/d/33326794-44675758-7f2fb5">
-        <button class="link-button dlink" data-os="linux">
-          <img class="download-icon" src="../assets/img/download.svg" width="18px" height="18px" alt="下载 Hello Minecraft! Launcher" />
-          <img class="download-icon-accessible" src="../assets/img/download-black.svg" width="18px" height="18px" alt="下载 Hello Minecraft! Launcher" />
-          .jar
-          <small>Linux, Oracle JDK 8~10</small>
-        </button>
-      </a>
-      <table class="downloads">
-        <colgroup>
-          <col />
-          <col />
-        </colgroup>
-        <tbody>
-        <tr>
-          <td>访问密码</td>
-          <td><strong>5267</strong></td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="download mac">
-      <div class="logo"></div>
-      <a href="https://url94.ctfile.com/d/33326794-44675755-87053d">
-        <button class="link-button dlink" data-os="osx">
-          <img class="download-icon" src="../assets/img/download.svg" width="18px" height="18px" alt="下载 Hello Minecraft! Launcher" />
-          <img class="download-icon-accessible" src="../assets/img/download-black.svg" width="18px" height="18px" alt="下载 Hello Minecraft! Launcher" />
-          Mac
-          <small>Java 8~10</small>
-        </button>
-      </a>
-      <table class="downloads">
-        <colgroup>
-          <col />
-          <col />
-        </colgroup>
-        <tbody>
-        <tr>
-          <td>访问密码</td>
-          <td><strong>5267</strong></td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-    <div>
-      <button class="btn-link" style="font-size: 14px; font-weight: 100;" onclick="onShowHashCode('stableChangelog')">查看 SHA-1 哈希值</button>
-      <a target="_blank" href="../changelog/stable.html"><button class="btn-link" style="font-size: 14px; font-weight: 100;">查看更新记录</button></a>
-      <div id="stableChangelog" style="display: none;">
-        <table class="table table-striped">
-          <tbody>
-          <tr>
-            <td>exe</td>
-            <td id="stableExeSha1">Loading...</td>
-          </tr>
-          <tr>
-            <td>jar</td>
-            <td id="stableJarSha1">Loading...</td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="swimlane">
-  <h2>下载开发版 <span id="devVersion">Loading...</span></h2>
-
-  <div class="alt-downloads">
-    <div class="download windows">
-      <div class="logo"></div>
-      <a id="devWindowsHref">
-        <button class="link-button dlink" data-os="win">
-          <img class="download-icon" src="../assets/img/download.svg" width="18px" height="18px" alt="下载 Hello Minecraft! Launcher" />
-          <img class="download-icon-accessible" src="../assets/img/download-black.svg" width="18px" height="18px" alt="下载 Hello Minecraft! Launcher" />
-          Windows
-          <small>Windows XP, Vista, 7, 8, 10</small>
-        </button>
-      </a>
-      <table class="downloads">
-        <colgroup>
-          <col />
-          <col />
-        </colgroup>
-        <tbody>
-        <tr>
-          <td><strong>.exe</strong></td>
-          <td>
-            <a class="dlink" data-os="winexe" id="devWindowsExe">下载</a>
-          </td>
-        </tr>
-        <tr>
-          <td><strong>.jar</strong></td>
-          <td>
-            <a class="dlink" data-os="winjar" id="devWindowsJar">下载</a>
-          </td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="download linux">
-      <div class="logo"></div>
-      <a id="devLinuxHref">
-        <button class="link-button dlink" data-os="linux">
-          <img class="download-icon" src="../assets/img/download.svg" width="18px" height="18px" alt="下载 Hello Minecraft! Launcher" />
-          <img class="download-icon-accessible" src="../assets/img/download-black.svg" width="18px" height="18px" alt="下载 Hello Minecraft! Launcher" />
-          .jar
-          <small>Linux, Oracle JDK 8~10</small>
-        </button>
-      </a>
-      <table class="downloads">
-        <colgroup>
-          <col />
-          <col />
-        </colgroup>
-        <tbody>
-        <tr>
-          <td><strong>.jar</strong></td>
-          <td><a class="dlink" data-os="linux" id="devLinuxJar">下载</a></td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="download mac">
-      <div class="logo"></div>
-      <a id="devMacHref">
-        <button class="link-button dlink" data-os="osx">
-          <img class="download-icon" src="../assets/img/download.svg" width="18px" height="18px" alt="下载 Hello Minecraft! Launcher" />
-          <img class="download-icon-accessible" src="../assets/img/download-black.svg" width="18px" height="18px" alt="下载 Hello Minecraft! Launcher" />
-          Mac
-          <small>Java 8~10</small>
-        </button>
-      </a>
-      <table class="downloads">
-        <colgroup>
-          <col />
-          <col />
-        </colgroup>
-        <tbody>
-        <tr>
-          <td><strong>.jar</strong></td>
-          <td><a class="dlink" data-os="osx" id="devMacJar">下载</a></td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-    <div>
-      <button class="btn-link" style="font-size: 14px; font-weight: 100;" onclick="onShowHashCode('devChangelog')">查看 SHA-1 哈希值</button>
-      <a target="_blank" href="../changelog/dev.html"><button class="btn-link" style="font-size: 14px; font-weight: 100;">查看更新记录</button></a>
-      <div id="devChangelog" style="display: none;">
-        <table class="table table-striped">
-          <tbody>
-          <tr>
-            <td id="devExeTd">Loading...</td>
-            <td id="devExeSha1">Loading...</td>
-          </tr>
-          <tr>
-            <td id="devJarTd">Loading...</td>
-            <td id="devJarSha1">Loading...</td>
-          </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
-</div>
-
-</div>
-</div>
-
-    <div align="center" style="margin: 1em 0;">
-        <ins class="adsbygoogle"
-             style="display:block; border-bottom: initial;"
-             data-ad-client="ca-pub-7328585512091257"
-             data-ad-slot="3049671934"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-    </div>
-</div>
-
 
 
 <div class="page__footer">
