--- a/download/index.html
+++ b/download/index.html
@@ -12,7 +12,7 @@
 <head>
     <meta charset="utf-8">
 
-<!-- begin _includes/seo.html --><title>下载 - HelBleach vs. Naruto</title>
+<!-- begin _includes/seo.html --><title>下载 - Bleach vs. Naruto</title>
 <meta name="description" content="Bleach vs. Naruto">
 
 
@@ -48,7 +48,7 @@
     
       "@type": "Person",
       "name": null,
-      "url": "https://hmcl.huangyuhui.net/"
+      "url": "https://bvn.download.jnw031.cf"
     
   }
 </script>
