--- a/index.html
+++ b/index.html
@@ -260,89 +260,11 @@ img {
 }
 </style>
 
-<div class="home">
-  <div class="container">
-    <div class="screenshot"></div>
-    <div class="ant-row">
-      <div class="ant-col ant-col-6">
-        <!-- <fa-icon icon="thumbs-up"></fa-icon> -->
-        <h2>六年历史</h2>
-      </div>
-      <div class="ant-col ant-col-6 ant-col-offset-3">
-        <h2>多系统支持</h2>
-      </div>
-      <div class="ant-col ant-col-6 ant-col-offset-3">
-        <h2>全新界面</h2>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="swimlane">
-  <div class="ant-row container">
-    <div class="ant-col ant-col-12">
-      <h2>自动安装</h2>
-      <p>支持导入 Curse、MultiMC 整合包</p>
-      <p>创建游戏并安装 Fabric、Forge、LiteLoader、OptiFine</p>
-      <p>支持导出 HMCL、MultiMC 整合包</p>
-    </div>
-    <div class="ant-col ant-col-10 ant-col-offset-2">
-      <img src="assets/img/installer_page.png" alt="InstallerPage" class="screenshot" />
-    </div>
-  </div>
-</div>
-<div class="swimlane">
-  <div class="ant-row container">
-    <div class="ant-col ant-col-10">
-      <img src="assets/img/purple_page.png" alt="ThemePage" class="screenshot" />
-    </div>
-    <div class="ant-col ant-col-12 ant-col-offset-2">
-      <h2>个性化主题</h2>
-      <p>多种启动器配色方案</p>
-      <p>支持更换背景图</p>
-    </div>
-  </div>
-</div>
-<div class="swimlane">
-  <div class="container" style="text-align: center">
-    <h1>开放源代码</h1>
-    <p>Hello Minecraft! Launcher 根据 GPLv3 协议开放源代码，开放且自由。</p>
-    <p>从 2015 年开始，已经获得至少 18 位贡献者的支持。</p>
-    <p>
-      访问
-      <a href="https://github.com/huanghongxun/HMCL">GitHub 仓库</a>
-      以获得详细信息。您可以在此处提交建议、反馈问题。
-    </p>
-    <div class="opensource-list" style="z-index: 50">
-      <a href="https://github.com/huanghongxun/HMCL/issues"><img alt="GitHub issues" src="https://img.shields.io/github/issues/huanghongxun/HMCL?style=for-the-badge" /></a>
-      <a href="https://github.com/huanghongxun/HMCL/network"><img alt="GitHub forks" src="https://img.shields.io/github/forks/huanghongxun/HMCL?style=for-the-badge" /></a>
-      <a href="https://github.com/huanghongxun/HMCL/stargazers"><img alt="GitHub stars" src="https://img.shields.io/github/stars/huanghongxun/HMCL?style=for-the-badge" /></a>
-    </div>
-  </div>
-</div>
-<div class="swimlane">
-  <div class="container" style="text-align: center">
-    <h1>捐赠</h1>
-    <p>
-      HMCL 是一个免费、开源的 Minecraft
-      启动器，允许玩家方便快捷地安装、管理、运行游戏。
-    </p>
-    <p>
-      您的赞助将帮助 HMCL
-      获得更好的发展、支持稳定高速的游戏安装与文件下载服务。
-    </p>
-    <p>
-      访问
-      <a href="https://afdian.net/@huanghongxun">爱发电主页</a>
-      以获得详细信息
-    </p>
-    <iframe id="afdian_leaflet_huanghongxun" class="afdian_iframe" src="https://afdian.net/leaflet?slug=huanghongxun" width="640" scrolling="no" height="260" frameborder="0"></iframe>
-  </div>
-</div>
 <div class="swimlane">
   <div class="container download-buttons">
     <h1>下载</h1>
     <button class="link-button dlink" onclick="window.location.href='download/index.html'">
-      下载 Hello Minecraft! Launcher
+      下载 Bleach vs. Naruto
     </button>
   </div>
 </div>
