--- a/index.html
+++ b/index.html
@@ -260,6 +260,23 @@ img {
 }
 </style>
 
+<div class="home">
+  <div class="container">
+    <div class="screenshot"></div>
+    <div class="ant-row">
+      <div class="ant-col ant-col-6">
+        <!-- <fa-icon icon="thumbs-up"></fa-icon> -->
+        <h2>六年历史</h2>
+      </div>
+      <div class="ant-col ant-col-6 ant-col-offset-3">
+        <h2>多系统支持</h2>
+      </div>
+      <div class="ant-col ant-col-6 ant-col-offset-3">
+        <h2>全新界面</h2>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="swimlane">
   <div class="container download-buttons">
     <h1>下载</h1>
@@ -268,7 +285,14 @@ img {
     </button>
   </div>
 </div>
-
+<div class="swimlane">
+  <div class="container">
+    <h1>友情链接</h1>
+    <p>
+      <a href="https://mikemo2195054.github.io/cn.html">mikemo2195054</a>
+    </p>
+  </div>
+</div>
 
     <div align="center" style="margin: 1em 0;">
         <ins class="adsbygoogle"
@@ -281,9 +305,6 @@ img {
 </div>
 
 
-
-
-<!-- end custom footer snippets -->
 
 
   <script src="assets/js/main.min.js"></script>
