--- a/index.html
+++ b/index.html
@@ -266,13 +266,13 @@ img {
     <div class="ant-row">
       <div class="ant-col ant-col-6">
         <!-- <fa-icon icon="thumbs-up"></fa-icon> -->
-        <h2>六年历史</h2>
+        <h2>一款</h2>
       </div>
       <div class="ant-col ant-col-6 ant-col-offset-3">
-        <h2>多系统支持</h2>
+        <h2>类似魂斗罗</h2>
       </div>
       <div class="ant-col ant-col-6 ant-col-offset-3">
-        <h2>全新界面</h2>
+        <h2>的格斗游戏</h2>
       </div>
     </div>
   </div>
