--- a/index.html
+++ b/index.html
@@ -291,6 +291,9 @@ img {
     <button class="link-button dlink" onclick="window.location.href='download/index.html'">
       下载 Bleach vs. Naruto
     </button>
+    <button class="link-button dlink" onclick="window.location.href='https://jnw031.lanzouw.com/iymYl0laqc7c'">
+      下载 游玩指南
+    </button>
   </div>
 </div>
 
