--- a/about/index.html
+++ b/about/index.html
@@ -174,8 +174,8 @@
       <section class="page__content" itemprop="text">
         
         <h1>Bleach vs. Naruto</h1>
-<p>由<a href="https://jnw031.cf">jnw031(LubsWang)</a>上传</p>
-<p>由<a href="https://share.eeo.cn/s/b/?sq=ICSuRqKXA3tyhLS734aAcQW0xUFjHR1zXF8A9cns68Q%3D">ClassIn</a>或<a href="tencent://message/?uin=545904841&Menu=yes">QQ</a>联系我。</p>
+<p>由<a href="https://jnw031.cf" target="_blank">jnw031(LubsWang)</a>上传</p>
+<p>由<a href="https://share.eeo.cn/s/b/?sq=ICSuRqKXA3tyhLS734aAcQW0xUFjHR1zXF8A9cns68Q%3D" target="_blank">ClassIn</a>或<a href="tencent://message/?uin=545904841&Menu=yes" target="_blank">QQ</a>联系我。</p>
 
         
       </section>
